# IOT_gif_spiffs

./: CMakeLists.txt  README.md  analyze_gifs.py  make_raw.py  make_raw_from_mp4.py  partitions.csv  sdkconfig  sdkconfig.defaults
Finalised gifs/: gif_b.raw
main/: CMakeLists.txt  idf_component.yml  main.c
